# SPDX-FileCopyrightText: 2023 Sequent Tech Inc <legal@sequentech.io>
# SPDX-License-Identifier: AGPL-3.0-only

[tool.poetry]
name = "frestq"
version = "4.0.0"
description = ""
authors = ["Eduardo Robles <edu@sequentech.io>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "frestq"}]

[tool.poetry.dependencies]
python = "^3.8"
apscheduler = "3.7.0"
requests = "^2.31"
Flask = "^2.3"
flask-sqlalchemy = "^3.0"
cryptography = "^41.0"
pyOpenSSL = "23.2.0"
enum34 = "^1.1"
ipaddress = "^1.0"
prettytable = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
